--- a/docs/css/styles.css
+++ b/docs/css/styles.css
@@ -1,24 +1,160 @@
 /*! jmpr-site v1.0.0 | (c) 2020  | ISC License | git+https://github.com/moulson/jmpr-site.git */
-/* line 5, src/sass/styles.scss */
+/* line 4, src/sass/styles.scss */
+html {
+  max-width: 1920px;
+  margin: auto;
+  scroll-behavior: smooth;
+}
+
+/* line 10, src/sass/styles.scss */
+.container-fluid {
+  padding: 140px 120px;
+}
+
+/* line 12, src/sass/styles.scss */
 .container-fluid.navy {
   background-color: #042633;
 }
 
-/* line 10, src/sass/styles.scss */
-.image-container {
+/* line 17, src/sass/styles.scss */
+.container-fluid.lblue {
+  padding: 0;
+  background-color: #91d4f1;
+}
+
+/* line 20, src/sass/styles.scss */
+.container-fluid.lblue.speech {
+  padding: 0;
+  background-image: url("../images/speech_bubble_hi.png");
+  background-repeat: no-repeat;
+  background-position: center;
+  background-color: #91d4f1;
+  background-size: cover;
+  background-repeat: no-repeat;
+  display: block;
+  width: 100%;
+  height: 187px;
+}
+
+/* line 35, src/sass/styles.scss */
+.logo-container {
   text-align: center;
 }
 
-/* line 12, src/sass/styles.scss */
-.image-container img {
-  max-width: 500px;
+/* line 37, src/sass/styles.scss */
+.logo-container img {
+  max-width: 358px;
+  min-width: 200px;
   width: 100%;
 }
 
-/* line 19, src/sass/styles.scss */
+/* line 45, src/sass/styles.scss */
+.header .nav-list {
+  padding-top: 20px;
+  list-style: none;
+  text-align: right;
+}
+
+/* line 49, src/sass/styles.scss */
+.header .nav-list li {
+  font-size: 30px;
+  display: inline-block;
+  color: #ffffff;
+  padding: 0 2px;
+}
+
+/* line 54, src/sass/styles.scss */
+.header .nav-list li a {
+  font-size: 30px;
+  display: inline-block;
+  color: #ffffff;
+  text-decoration: none;
+}
+
+/* line 60, src/sass/styles.scss */
+.header .nav-list li.separator {
+  color: #23a58f;
+  font-size: 60px;
+}
+
+/* line 68, src/sass/styles.scss */
+.header_chart {
+  display: flex;
+  flex-wrap: wrap;
+  margin-top: 75px;
+}
+
+/* line 72, src/sass/styles.scss */
+.header_chart .sub {
+  margin-top: 30px;
+}
+
+/* line 74, src/sass/styles.scss */
+.header_chart .sub p {
+  font-size: 70px;
+  color: #ffffff;
+}
+
+/* line 79, src/sass/styles.scss */
+.header_chart .main {
+  padding-right: 30px;
+}
+
+/* line 81, src/sass/styles.scss */
+.header_chart .main p {
+  color: #5cd8f2;
+  text-align: right;
+  font-size: 150px;
+  line-height: 0.93;
+  width: 100%;
+}
+
+/* line 90, src/sass/styles.scss */
+.header_chart .chart-container {
+  margin: auto;
+}
+
+/* line 92, src/sass/styles.scss */
+.header_chart .chart-container img {
+  float: right;
+  width: 100%;
+  margin: auto;
+}
+
+/* line 101, src/sass/styles.scss */
+.header_contact {
+  margin-top: 50px;
+}
+
+/* line 103, src/sass/styles.scss */
+.header_contact p {
+  margin: 0;
+}
+
+/* line 106, src/sass/styles.scss */
+.header_contact .title {
+  color: #23a58f;
+  font-size: 70px;
+}
+
+/* line 110, src/sass/styles.scss */
+.header_contact .text {
+  color: #ffffff;
+  font-size: 60px;
+}
+
+/* line 118, src/sass/styles.scss */
 .holding h1 {
   padding: 50px 0;
   color: #fff;
   text-align: center;
   font-size: 32px;
+}
+
+/* line 127, src/sass/styles.scss */
+.section-2 p {
+  color: #042633;
+  font-size: 60px;
+  line-height: 72px;
+  font-weight: bold;
 }
