--- a/docs/css/styles.css
+++ b/docs/css/styles.css
@@ -1,28 +1,33 @@
 /*! jmpr-site v1.0.0 | (c) 2020  | ISC License | git+https://github.com/moulson/jmpr-site.git */
-/* line 4, src/sass/styles.scss */
+@font-face {
+  font-family: "Venti Extra Bold";
+  src: url("/fonts/VentiCF-ExtraBold.woff2");
+}
+
+/* line 6, src/sass/styles.scss */
 html {
   max-width: 1920px;
   margin: auto;
   scroll-behavior: smooth;
 }
 
-/* line 10, src/sass/styles.scss */
+/* line 12, src/sass/styles.scss */
 .container-fluid {
   padding: 140px 120px;
 }
 
-/* line 12, src/sass/styles.scss */
+/* line 14, src/sass/styles.scss */
 .container-fluid.navy {
   background-color: #042633;
 }
 
-/* line 17, src/sass/styles.scss */
+/* line 19, src/sass/styles.scss */
 .container-fluid.lblue {
   padding: 0;
   background-color: #91d4f1;
 }
 
-/* line 20, src/sass/styles.scss */
+/* line 22, src/sass/styles.scss */
 .container-fluid.lblue.speech {
   padding: 0;
   background-image: url("../images/speech_bubble_hi.png");
@@ -36,26 +41,26 @@ html {
   height: 187px;
 }
 
-/* line 35, src/sass/styles.scss */
+/* line 37, src/sass/styles.scss */
 .logo-container {
   text-align: center;
 }
 
-/* line 37, src/sass/styles.scss */
+/* line 39, src/sass/styles.scss */
 .logo-container img {
   max-width: 358px;
   min-width: 200px;
   width: 100%;
 }
 
-/* line 45, src/sass/styles.scss */
+/* line 47, src/sass/styles.scss */
 .header .nav-list {
   padding-top: 20px;
   list-style: none;
   text-align: right;
 }
 
-/* line 49, src/sass/styles.scss */
+/* line 51, src/sass/styles.scss */
 .header .nav-list li {
   font-size: 30px;
   display: inline-block;
@@ -63,7 +68,7 @@ html {
   padding: 0 2px;
 }
 
-/* line 54, src/sass/styles.scss */
+/* line 56, src/sass/styles.scss */
 .header .nav-list li a {
   font-size: 30px;
   display: inline-block;
@@ -71,37 +76,40 @@ html {
   text-decoration: none;
 }
 
-/* line 60, src/sass/styles.scss */
+/* line 62, src/sass/styles.scss */
 .header .nav-list li.separator {
   color: #23a58f;
   font-size: 60px;
 }
 
-/* line 68, src/sass/styles.scss */
+/* line 70, src/sass/styles.scss */
 .header_chart {
   display: flex;
   flex-wrap: wrap;
   margin-top: 75px;
 }
 
-/* line 72, src/sass/styles.scss */
+/* line 74, src/sass/styles.scss */
 .header_chart .sub {
   margin-top: 30px;
 }
 
-/* line 74, src/sass/styles.scss */
+/* line 76, src/sass/styles.scss */
 .header_chart .sub p {
+  font-family: "Venti Extra Bold";
+  line-height: 1;
   font-size: 70px;
   color: #ffffff;
 }
 
-/* line 79, src/sass/styles.scss */
+/* line 83, src/sass/styles.scss */
 .header_chart .main {
   padding-right: 30px;
 }
 
-/* line 81, src/sass/styles.scss */
+/* line 85, src/sass/styles.scss */
 .header_chart .main p {
+  font-family: "Venti Extra Bold";
   color: #5cd8f2;
   text-align: right;
   font-size: 150px;
@@ -109,41 +117,41 @@ html {
   width: 100%;
 }
 
-/* line 90, src/sass/styles.scss */
+/* line 95, src/sass/styles.scss */
 .header_chart .chart-container {
   margin: auto;
 }
 
-/* line 92, src/sass/styles.scss */
+/* line 97, src/sass/styles.scss */
 .header_chart .chart-container img {
   float: right;
   width: 100%;
   margin: auto;
 }
 
-/* line 101, src/sass/styles.scss */
+/* line 106, src/sass/styles.scss */
 .header_contact {
   margin-top: 50px;
 }
 
-/* line 103, src/sass/styles.scss */
+/* line 108, src/sass/styles.scss */
 .header_contact p {
   margin: 0;
 }
 
-/* line 106, src/sass/styles.scss */
+/* line 111, src/sass/styles.scss */
 .header_contact .title {
   color: #23a58f;
   font-size: 70px;
 }
 
-/* line 110, src/sass/styles.scss */
+/* line 115, src/sass/styles.scss */
 .header_contact .text {
   color: #ffffff;
   font-size: 60px;
 }
 
-/* line 118, src/sass/styles.scss */
+/* line 123, src/sass/styles.scss */
 .holding h1 {
   padding: 50px 0;
   color: #fff;
@@ -151,7 +159,7 @@ html {
   font-size: 32px;
 }
 
-/* line 127, src/sass/styles.scss */
+/* line 132, src/sass/styles.scss */
 .section-2 p {
   color: #042633;
   font-size: 60px;
